fix z-index

--- a/app/assets/stylesheets/reserves.css.scss
+++ b/app/assets/stylesheets/reserves.css.scss
@@ -78,6 +78,7 @@
   bottom: 0px;
   background-color: white;
   border: 4px black solid;
+  z-index: 1000;
 }
 
 .topic_form .topic_list label {
